--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "next": "12.1.6",
     "prettier": "^2.7.1",
+    "prettier-plugin-organize-imports": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sort-package-json": "^1.57.0",
