--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "swiper": "^9.2.3",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
     "next": "^13.1.6",
@@ -21,6 +19,9 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
