--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.2",
     "@next/font": "^13.1.6",
-    "swiper": "^9.2.3",
+    "clsx": "^1.2.1",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
+    "mongodb": "^5.3.0",
     "next": "^13.1.6",
+    "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swiper": "^9.2.3",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
