--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "^13.1.6",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
+    "nextjs-progressbar": "^0.0.16",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "swiper": "^9.2.3",
     "typescript": "^5.0.4"
   },
