--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "my-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://konradhojda.github.io/pro-shelter",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.2",
@@ -17,8 +20,8 @@
     "mongodb": "^5.3.0",
     "next": "^13.1.6",
     "next-auth": "^4.22.1",
-    "react": "^18.2.0",
     "nextjs-progressbar": "^0.0.16",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "swiper": "^9.2.3",
@@ -30,6 +33,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-organize-imports": "^3.0.0",
