--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "test": "jest"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.2",
@@ -17,6 +16,7 @@
     "clsx": "^1.2.1",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
+    "jest": "^29.5.0",
     "mongodb": "^5.3.0",
     "next": "^13.1.6",
     "next-auth": "^4.22.1",
@@ -28,6 +28,7 @@
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
@@ -37,6 +38,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-organize-imports": "^3.0.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.1.0"
   }
 }
