feat(core): add previous project backend to project and try to match it to current dev

--- a/package.json
+++ b/package.json
@@ -1,44 +1,9 @@
 {
-  "name": "my-project",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://konradhojda.github.io/pro-shelter",
+  "name": "proshelter",
+  "version": "0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@next-auth/mongodb-adapter": "^1.1.2",
-    "@next/font": "^13.1.6",
-    "clsx": "^1.2.1",
-    "eslint": "^8.33.0",
-    "eslint-config-next": "^13.1.6",
-    "jest": "^29.5.0",
-    "mongodb": "^5.3.0",
-    "next": "^13.1.6",
-    "next-auth": "^4.22.1",
-    "nextjs-progressbar": "^0.0.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "swiper": "^9.2.3",
-    "typescript": "^5.0.4"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/next-auth": "^3.15.0",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "autoprefixer": "^10.4.13",
-    "gh-pages": "^5.0.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "prettier-plugin-organize-imports": "^3.0.0",
-    "tailwindcss": "^3.2.4",
-    "ts-jest": "^29.1.0"
+    "start_backend": "yarn --cwd backend/ start",
+    "start_frontend": "yarn --cwd frontend/ dev",
+    "start": "yarn start_backend  & yarn start_frontend"
   }
 }
